WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310117
[WebCore] Unified sources build fix
https://bugs.webkit.org/show_bug.cgi?id=310117
Summary
[WebCore] Unified sources build fix
Aditya Keerthi
Reported
2026-03-17 11:07:02 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-17 11:11:55 PDT
<
rdar://problem/172760407
>
Aditya Keerthi
Comment 2
2026-03-17 11:16:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60791
EWS
Comment 3
2026-03-17 11:35:39 PDT
Committed
309421@main
(a4065e1e4313): <
https://commits.webkit.org/309421@main
> Reviewed commits have been landed. Closing PR #60791 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug